--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -1,6 +1,7 @@
 <div class="tsp-ts-paint__container" (paste)="onPaste($event)" (copy)="onCopy()">
   <div class="tsp-horizontal-bar">
     <!--tsPaintMenus [menuStructure]="menuStructure"></tsPaintMenus-->
+    <tsp-menus [menuStructure]="store.state.menuStructure"></tsp-menus>
   </div>
 
   <div class="tsp-horizontal-bar tsp-can-grow">
