--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.less
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.less
@@ -1,12 +1,14 @@
+@import 'variables';
+
 .tsp-ts-paint__container{
   display: flex;
   flex-direction: column;
-  background-color: #C3C7CB;
+  background-color: @color--lighter-grey;
   width: 100%;
   height: calc(100vh - 86px);
 }
 
 .tsp-ts-paint__canvas-container{
-  background-color: #868A8E;
+  background-color: @color--grey;
   overflow: auto;
 }
