--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.less
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.less
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   background-color: @color--lighter-grey;
-  width: 100%;
-  height: calc(100vh - 86px);
+  width: 100vw;
+  height: 100vh;
 }
 
 .tsp-ts-paint__canvas-container{
