Open image file

--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -29,6 +29,7 @@
 </div>
 
 <div style="display: none">
+  <tsp-file-upload></tsp-file-upload>
   <!--tsPaintFileUpload #fileUpload (imageUploaded)="imageUploaded($event)"></tsPaintFileUpload>
   <tsPaintFileDownload #fileDownload [imageDataGetter]="getImageData.bind(this)" [fileName]="fileName">
   </tsPaintFileDownload>
