Moved tsp-file-upload

--- a/ts-paint/src/app/app.component.html
+++ b/ts-paint/src/app/app.component.html
@@ -1,1 +1,9 @@
 <tsp-ts-paint></tsp-ts-paint>
+
+<div style="display: none">
+  <tsp-file-upload></tsp-file-upload>
+  <!--tsPaintFileDownload #fileDownload [imageDataGetter]="getImageData.bind(this)" [fileName]="fileName">
+  </tsPaintFileDownload>
+  <tsPaintSelectionCopy #selectionCopy>
+  </tsPaintSelectionCopy-->
+</div>
