Implemented Save file option

--- a/ts-paint/src/app/app.component.html
+++ b/ts-paint/src/app/app.component.html
@@ -2,8 +2,7 @@
 
 <div style="display: none">
   <tsp-file-upload></tsp-file-upload>
-  <!--tsPaintFileDownload #fileDownload [imageDataGetter]="getImageData.bind(this)" [fileName]="fileName">
-  </tsPaintFileDownload>
-  <tsPaintSelectionCopy #selectionCopy>
+  <tsp-file-download></tsp-file-download>
+  <!--tsPaintSelectionCopy #selectionCopy>
   </tsPaintSelectionCopy-->
 </div>
