--- a/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.html
+++ b/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.html
@@ -1,2 +1,3 @@
-<canvas #imageCanvas [ngStyle]="{'width': zoomedWidth+'px', 'height': zoomedHeight+'px'}">
+<canvas class="tsp-zoomable-canvas__canvas" #imageCanvas
+  [ngStyle]="{'width': zoomedWidth+'px', 'height': zoomedHeight+'px'}">
 </canvas>
