--- a/ts-paint/src/styles.less
+++ b/ts-paint/src/styles.less
@@ -39,3 +39,9 @@ body{
   border: 1px solid;
   border-color: white @color--grey @color--grey white;
 }
+
+.tsp-button{
+  &:extend(.tsp-raised-item);
+  outline: 1px solid black;
+  background-color: @color--lighter-grey;
+}
