--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -12,7 +12,8 @@
     </div>
     <div #canvasContainer class="tsp-vertical-bar tsp-can-grow tsp-ts-paint__canvas-container">
       <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.image"></tsp-zoomable-canvas>
-      <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.previewImage"></tsp-zoomable-canvas>
+      <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.previewImage"
+        [offsetW]="store.state.previewOffsetW" [offsetH]="store.state.previewOffsetH"></tsp-zoomable-canvas>
       <tsp-mouse-tracker [zoom]="store.state.zoom" [image]="store.state.image"
         (mouseMove)="store.processMouseMove($event)" (mouseDown)="store.processMouseDown($event)"
         (mouseUp)="store.processMouseUp($event)" (mouseScroll)="store.processMouseScroll($event)"></tsp-mouse-tracker>
