Changed offset type

--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -13,7 +13,7 @@
     <div #canvasContainer class="tsp-vertical-bar tsp-can-grow tsp-ts-paint__canvas-container">
       <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.image"></tsp-zoomable-canvas>
       <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.previewImage"
-        [offsetW]="store.state.previewOffsetW" [offsetH]="store.state.previewOffsetH"></tsp-zoomable-canvas>
+        [offset]="store.state.previewOffset"></tsp-zoomable-canvas>
       <tsp-mouse-tracker [zoom]="store.state.zoom" [image]="store.state.image"
         (mouseMove)="store.processMouseMove($event)" (mouseDown)="store.processMouseDown($event)"
         (mouseUp)="store.processMouseUp($event)" (mouseScroll)="store.processMouseScroll($event)"></tsp-mouse-tracker>
