--- a/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.html
+++ b/ts-paint/src/app/components/zoomable-canvas/zoomable-canvas.component.html
@@ -1,3 +1,3 @@
 <canvas class="tsp-zoomable-canvas__canvas" #imageCanvas
-  [ngStyle]="{'width': zoomedWidth+'px', 'height': zoomedHeight+'px', 'left': offsetW+'px', 'top': offsetH+'px'}">
+  [ngStyle]="{'width': zoomedWidth+'px', 'height': zoomedHeight+'px', 'left': offset.w+'px', 'top': offset.h+'px'}">
 </canvas>
