Making it look more like MS paint

--- a/ts-paint/src/styles.less
+++ b/ts-paint/src/styles.less
@@ -40,6 +40,16 @@ body{
   border-color: white @color--grey @color--grey white;
 }
 
+.tsp-depressed-item-container{
+  border: 1px solid;
+  border-color: #868B8E #FFFFFF #FFFFFF #868B8E;
+}
+
+.tsp-depressed-item{
+  border: 1px solid;
+  border-color: #000000 #C3C7CB #C3C7CB #000000;
+}
+
 .tsp-button{
   &:extend(.tsp-raised-item);
   outline: 1px solid black;
