--- a/ts-paint/src/app/components/palette/palette.component.html
+++ b/ts-paint/src/app/components/palette/palette.component.html
@@ -1,6 +1,6 @@
 <div class="colorSelector">
-  <div class="depressedItemContainer">
-    <div class="depressedItem selectedColorsDiv">
+  <div class="tsp-depressed-item-container">
+    <div class="tsp-depressed-item selectedColorsDiv">
       <div class="raisedItemContainer colorSampleContainer" style="bottom: 3px; right: 3px">
         <div class="raisedItem colorSample" [style.background-color]="getRgb(selectedSecondaryColor)">
         </div>
@@ -11,8 +11,8 @@
       </div>
     </div>
   </div>
-  <div *ngFor="let color of availableColors" class="depressedItemContainer">
-    <div class="depressedItem paletteButton" [style.background-color]="getRgb(color)"
+  <div *ngFor="let color of availableColors" class="tsp-depressed-item-container">
+    <div class="tsp-depressed-item paletteButton" [style.background-color]="getRgb(color)"
       (click)="selectColor($event, color)" (contextmenu)="selectColor($event, color)">
     </div>
   </div>
