--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -1,35 +1,40 @@
-<div class="tsp-ts-paint__container" (paste)="onPaste($event)" (copy)="onCopy()">
-  <div class="tsp-horizontal-bar">
-    <tsp-menu [menuStructure]="store.state.menuStructure" (itemSelected)="store.executeMenuAction($event.action)">
-    </tsp-menu>
-  </div>
-
-  <div class="tsp-horizontal-bar tsp-can-grow">
-    <div class="tsp-vertical-bar" style="margin-left: 8px; margin-right: 4px">
-      <tsp-toolbox [availableTools]="store.state.availableDrawingTools"
-        [selectedTool]="store.state.selectedDrawingTool?.type" (selectedToolChange)="store.setDrawingTool($event)">
-      </tsp-toolbox>
+<div class="tsp-ts-paint__container tsp-raised-item-container" (paste)="onPaste($event)" (copy)="onCopy()">
+  <div class="tsp-ts-paint__inner-container tsp-raised-item">
+    <div class="tsp-horizontal-bar">
+      <tsp-menu [menuStructure]="store.state.menuStructure" (itemSelected)="store.executeMenuAction($event.action)">
+      </tsp-menu>
     </div>
-    <div #canvasContainer class="tsp-vertical-bar tsp-can-grow tsp-ts-paint__canvas-container">
-      <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.image"></tsp-zoomable-canvas>
-      <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.previewImage"
-        [offset]="store.state.previewOffset"></tsp-zoomable-canvas>
-      <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.selectionImage"
-        [offset]="store.state.selectionOffset"></tsp-zoomable-canvas>
-      <tsp-mouse-tracker [zoom]="store.state.zoom" [image]="store.state.image"
-        (mouseMove)="store.processMouseMove($event)" (mouseDown)="store.processMouseDown($event)"
-        (mouseUp)="store.processMouseUp($event)" (mouseScroll)="store.processMouseScroll($event)"></tsp-mouse-tracker>
+
+    <div class="tsp-horizontal-bar tsp-can-grow">
+      <div class="tsp-vertical-bar" style="margin-left: 8px; margin-right: 4px">
+        <tsp-toolbox [availableTools]="store.state.availableDrawingTools"
+          [selectedTool]="store.state.selectedDrawingTool?.type" (selectedToolChange)="store.setDrawingTool($event)">
+        </tsp-toolbox>
+      </div>
+      <div class="tsp-depressed-item-container tsp-vertical-bar tsp-can-grow">
+        <div #canvasContainer class="tsp-depressed-item tsp-can-grow tsp-ts-paint__canvas-container">
+          <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.image"></tsp-zoomable-canvas>
+          <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.previewImage"
+            [offset]="store.state.previewOffset"></tsp-zoomable-canvas>
+          <tsp-zoomable-canvas [zoom]="store.state.zoom" [image]="store.state.selectionImage"
+            [offset]="store.state.selectionOffset"></tsp-zoomable-canvas>
+          <tsp-mouse-tracker [zoom]="store.state.zoom" [image]="store.state.image"
+            (mouseMove)="store.processMouseMove($event)" (mouseDown)="store.processMouseDown($event)"
+            (mouseUp)="store.processMouseUp($event)" (mouseScroll)="store.processMouseScroll($event)">
+          </tsp-mouse-tracker>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="tsp-horizontal-bar">
-    <tsp-palette [selectedPrimaryColor]="this.store.state.primaryColor"
-      [selectedSecondaryColor]="this.store.state.secondaryColor" [availableColors]="this.store.state.availableColors"
-      (selectedColorChange)="this.store.setColor($event)">
-    </tsp-palette>
-  </div>
+    <div class="tsp-horizontal-bar">
+      <tsp-palette [selectedPrimaryColor]="this.store.state.primaryColor"
+        [selectedSecondaryColor]="this.store.state.secondaryColor" [availableColors]="this.store.state.availableColors"
+        (selectedColorChange)="this.store.setColor($event)">
+      </tsp-palette>
+    </div>
 
-  <div class="tsp-horizontal-bar">
-    TODO: info
+    <div class="tsp-horizontal-bar">
+      TODO: info
+    </div>
   </div>
 </div>
