--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.less
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.less
@@ -1,11 +1,17 @@
 @import 'variables';
 
 .tsp-ts-paint__container{
-  display: flex;
-  flex-direction: column;
   background-color: @color--lighter-grey;
   width: 100vw;
   height: 100vh;
+  box-sizing: border-box;
+}
+
+.tsp-ts-paint__inner-container{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 .tsp-ts-paint__canvas-container{
