--- a/ts-paint/src/app/components/mouse-tracker/mouse-tracker.component.less
+++ b/ts-paint/src/app/components/mouse-tracker/mouse-tracker.component.less
@@ -1,7 +1,9 @@
 :host(tsp-mouse-tracker){
   position: relative;
+  height: 100%;
+  width: fit-content;
 }
 
 .tsp-mouse-tracker__div{
-  position: absolute;
+  position: relative;
 }
