--- a/ts-paint/src/styles.less
+++ b/ts-paint/src/styles.less
@@ -42,12 +42,12 @@ body{
 
 .tsp-depressed-item-container{
   border: 1px solid;
-  border-color: #868B8E #FFFFFF #FFFFFF #868B8E;
+  border-color: @color--grey white white  @color--grey;
 }
 
 .tsp-depressed-item{
   border: 1px solid;
-  border-color: #000000 #C3C7CB #C3C7CB #000000;
+  border-color: black @color--lighter-grey @color--lighter-grey black;
 }
 
 .tsp-button{
