Improved displaying of menus

--- a/ts-paint/src/app/components/menu/menu.component.html
+++ b/ts-paint/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="tsp-menu__menu-level-1" *ngFor="let menu1 of menuStructure">{{menu1.name}}
+<div class="tsp-menu__menu-level-1" *ngFor="let menu1 of menuStructure" (click)="focusMenu()">{{menu1.name}}
   <div class="tsp-raised-item-container tsp-menu__menu-level-2-container" *ngIf="menu1.menus">
     <div class="tsp-raised-item">
       <ng-container *ngFor="let menu2 of menu1.menus">
