--- a/ts-paint/src/app/components/toolbox/toolbox.component.less
+++ b/ts-paint/src/app/components/toolbox/toolbox.component.less
@@ -2,7 +2,9 @@
 
 :host(tsp-toolbox){
   width: 50px;
-  padding-top: 1px;
+  padding-top: 2px;
+  margin-left: 4px;
+  margin-right: 4px
 }
 
 .tsp-toolbox__button{
