Added modal window icon

--- a/ts-paint/src/app/components/menu/menu.component.less
+++ b/ts-paint/src/app/components/menu/menu.component.less
@@ -26,6 +26,7 @@
   background-color: @color--lighter-grey;
   color: black;
   top: 19px;
+  left: 0px;
 }
 
 :host(tsp-menu:focus) .tsp-menu__menu-level-1:hover .tsp-menu__menu-level-2-container{
