--- a/ts-paint/src/app/components/modal-window/modal-window.component.html
+++ b/ts-paint/src/app/components/modal-window/modal-window.component.html
@@ -1,7 +1,8 @@
 <div class="tsp-modal-window__container tsp-raised-item-container"
   [ngClass]="{'tsp-modal-window__container--fullscreen': fullscreen}">
   <div class="tsp-modal-window__inner-container tsp-raised-item">
-    <div class="tsp-modal-window__title-bar">
+    <div class="tsp-modal-window__title-bar tsp-horizontal-bar">
+      <div class="tsp-modal-window__title-bar-icon" *ngIf="this.icon" [ngClass]="iconClass"></div>
       {{title}}
     </div>
     <ng-content></ng-content>
