--- a/ts-paint/src/app/components/modal-window/modal-window.component.less
+++ b/ts-paint/src/app/components/modal-window/modal-window.component.less
@@ -48,3 +48,15 @@
   padding: 2px;
   box-sizing: border-box;
 }
+
+.tsp-modal-window__title-bar-icon{
+  display: block;
+  width: 16px;
+  height: 16px;
+  margin-top: -1px;
+  margin-right: 3px;
+}
+
+.tsp-modal-window__title-bar-icon--paint{
+  background: url("../../../assets/icons/paint.png") no-repeat center;
+}
