--- a/ts-paint/src/app/components/toolbox/toolbox.component.less
+++ b/ts-paint/src/app/components/toolbox/toolbox.component.less
@@ -3,50 +3,57 @@
 :host(tsp-toolbox){
   width: 50px;
   padding-top: 2px;
-  margin-left: 4px;
-  margin-right: 4px
+  margin-left: 5px;
+  margin-right: 3px
 }
 
 .tsp-toolbox__button{
   width: 24px;
   height: 24px;
   padding: 0;
-  margin: -1px 0 0 1px;
   display: inline-block;
-}
-
-.tsp-toolbox__button:active{
-  background-position: calc(50% + 2px) calc(50% + 2px);
-  border-color: @color--grey white white @color--grey;
-  background-color: @color--lighter-grey;
+  outline: none;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .tsp-toolbox__button--selected{
-  background-position: calc(50% + 1px) calc(50% + 1px);
-  border-color: @color--grey white white @color--grey;
+  margin: 0 0 0 1px;
+  border-width: 1px 2px 1px 1px;
+  border-color: @color--grey @color--lighter-grey @color--lighter-grey @color--grey;
+  background-position: center calc(50% + 1px) !important;
   background-color: @color--lightest-grey;
 }
 
+.tsp-toolbox__button--selected::before {
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  border-width: 1px;
+  border-color: black white white black;
+}
+
 .tsp-toolbox__button--lineIcon{
-  background: url("../../../assets/icons/line.png") no-repeat center;
+  background-image: url("../../../assets/icons/line.png");
 }
 
 .tsp-toolbox__button--pencilIcon{
-  background: url("../../../assets/icons/pencil.png") no-repeat center;
+  background-image: url("../../../assets/icons/pencil.png");
 }
 
 .tsp-toolbox__button--rectangleIcon{
-  background: url("../../../assets/icons/rectangle.png") no-repeat center;
+  background-image: url("../../../assets/icons/rectangle.png");
 }
 
 .tsp-toolbox__button--colorPickerIcon{
-  background: url("../../../assets/icons/colorPicker.png") no-repeat center;
+  background-image: url("../../../assets/icons/colorPicker.png");
 }
 
 .tsp-toolbox__button--colorFillerIcon{
-  background: url("../../../assets/icons/colorFiller.png") no-repeat center;
+  background-image: url("../../../assets/icons/colorFiller.png");
 }
 
 .tsp-toolbox__button--rectangleSelectIcon{
-  background: url("../../../assets/icons/rectangleSelect.png") no-repeat center;
+  background-image: url("../../../assets/icons/rectangleSelect.png");
 }
