--- a/ts-paint/src/app/components/modal-window/modal-window.component.less
+++ b/ts-paint/src/app/components/modal-window/modal-window.component.less
@@ -60,3 +60,14 @@
 .tsp-modal-window__title-bar-icon--paint{
   background: url("../../../assets/icons/paint.png") no-repeat center;
 }
+
+.tsp-modal-window__title-bar>button{
+  width: 15px;
+  background-color: @color--lighter-grey;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.tsp-modal-window__close-button{
+  background-image: url("../../../assets/icons/close.png");
+}
