--- a/ts-paint/src/styles.less
+++ b/ts-paint/src/styles.less
@@ -55,6 +55,7 @@ body{
   position: relative;
   background-color: @color--lighter-grey;
   margin: 0px 1px 1px 0px;
+  outline: none;
 }
 
 .tsp-button::before {
@@ -69,7 +70,7 @@ body{
 }
 
 .tsp-button:active{
-  background-position: calc(50% + 2px) calc(50% + 2px) !important;
+  background-position: calc(50% + 1px) calc(50% + 1px) !important;
   border-color: @color--grey @color--lighter-grey @color--lighter-grey @color--grey;
 }
 
