--- a/ts-paint/src/app/components/toolbox/toolbox.component.less
+++ b/ts-paint/src/app/components/toolbox/toolbox.component.less
@@ -17,6 +17,10 @@
   background-position: center;
 }
 
+.tsp-toolbox__button:active{
+  background-position: calc(50% + 2px) calc(50% + 2px) !important;
+}
+
 .tsp-toolbox__button--selected{
   margin: 0 0 0 1px;
   border-width: 1px 2px 1px 1px;
