--- a/ts-paint/src/app/components/modal-window/modal-window.component.less
+++ b/ts-paint/src/app/components/modal-window/modal-window.component.less
@@ -13,6 +13,7 @@
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0px); // https://stackoverflow.com/questions/27385126/chrome-font-appears-blurry#answer-27464561
+  //transform: translate(-50%, -50%);
   background-color: @color--lighter-grey;
 }
 
@@ -27,8 +28,6 @@
 
 .tsp-modal-window__inner-container{
   padding: 1px;
-  min-width: 200px;
-  min-height: 150px;
   display: flex;
   flex-direction: column;
 }
