--- a/ts-paint/src/styles.less
+++ b/ts-paint/src/styles.less
@@ -15,6 +15,14 @@ body{
   color: black;
 }
 
+button{
+  font: inherit;
+}
+
+input{
+  font: inherit;
+}
+
 .tsp-can-grow{
   flex-grow: 1;
 }
@@ -81,4 +89,21 @@ body{
   bottom: -2px;
   border-width: 1px;
   border-color: black white white black;
+}
+
+.tsp-text-button{
+  padding: 2px 0px 3px 0px;
+  margin-left: 12px;
+  margin-bottom: 6px;
+  min-width: 72px;
+}
+
+.tsp-input-label{
+  margin: 4px 4px 0 12px;
+}
+
+.tsp-text-input{
+  padding-bottom: 5px;
+  padding-left: 2px;
+  outline: none;
 }
