Added footer-info component

--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="tsp-horizontal-bar">
-      TODO: info
+      <tsp-footer-info></tsp-footer-info>
     </div>
   </div>
 </tsp-modal-window>
