Added display of coordinates to footer

--- a/ts-paint/src/app/components/footer-info/footer-info.component.html
+++ b/ts-paint/src/app/components/footer-info/footer-info.component.html
@@ -1,5 +1,5 @@
 <div class="tsp-depressed-item-container tsp-can-grow tsp-footer-info__help">
-  {{help_text || ''}}
+  {{helpText || ''}}
 </div>
 <div class="tsp-depressed-item-container tsp-footer-info__coordinates tsp-footer-info__coordinates--shape-start">
   {{shapeStart?shapeStart.w+','+shapeStart.h:''}}
