Added magnifier tool

--- a/ts-paint/src/app/components/toolbox/toolbox.component.less
+++ b/ts-paint/src/app/components/toolbox/toolbox.component.less
@@ -61,3 +61,7 @@
 .tsp-toolbox__button--rectangleSelectIcon{
   background-image: url("../../../assets/icons/rectangleSelect.png");
 }
+
+.tsp-toolbox__button--magnifierIcon{
+  background-image: url("../../../assets/icons/magnifier.png");
+}
