Improved Firefox compatibility

--- a/ts-paint/src/styles.less
+++ b/ts-paint/src/styles.less
@@ -58,6 +58,11 @@ input{
   border-color: black @color--lighter-grey @color--lighter-grey black;
 }
 
+hr{
+  border: 1px solid;
+  border-color: @color--grey white white  @color--grey;
+}
+
 .tsp-button{
   &:extend(.tsp-raised-item);
   position: relative;
