--- a/ts-paint/src/app/views/ts-paint/ts-paint.component.html
+++ b/ts-paint/src/app/views/ts-paint/ts-paint.component.html
@@ -41,7 +41,8 @@
     </div>
 
     <div class="tsp-horizontal-bar">
-      <tsp-footer-info [shapeStart]="store.state.selectedDrawingTool?.previewShapeStart || store.state.mousePosition"
+      <tsp-footer-info [helpText]="store.state.selectedDrawingTool?.helpText"
+        [shapeStart]="store.state.selectedDrawingTool?.previewShapeStart || store.state.mousePosition"
         [shapeDimensions]="store.state.selectedDrawingTool?.previewShapeDimensions"></tsp-footer-info>
     </div>
   </div>
