Improved UX of attributes window

--- a/ts-paint/src/app/components/modal-window/modal-window.component.html
+++ b/ts-paint/src/app/components/modal-window/modal-window.component.html
@@ -6,7 +6,7 @@
       <div class="tsp-can-grow">
         {{title}}
       </div>
-      <button *ngIf="closable" class="tsp-button tsp-modal-window__close-button"></button>
+      <button *ngIf="closable" class="tsp-button tsp-modal-window__close-button" (click)="close.emit()"></button>
     </div>
     <ng-content></ng-content>
   </div>
