--- a/ts-paint/src/app/components/attributes-window/attributes-window.component.html
+++ b/ts-paint/src/app/components/attributes-window/attributes-window.component.html
@@ -1,9 +1,10 @@
-<tsp-modal-window [title]="'Attributes'" [closable]="true">
+<tsp-modal-window [title]="'Attributes'" [closable]="true" (close)="cancel.emit()" (keyup.enter)="okClicked()"
+  (keyup.escape)="cancel.emit()">
   <div class="tsp-horizontal-bar tsp-attributes-window__container">
     <div class="tsp-vertical-bar">
       <div class="tsp-horizontal-bar">
-        <tsp-integer-input class="tsp-attributes-window__dimension_input" [label]="'Width:'" [maxValue]="99999"
-          [(value)]="width">
+        <tsp-integer-input #widthInput class="tsp-attributes-window__dimension_input" [label]="'Width:'"
+          [maxValue]="99999" [(value)]="width">
         </tsp-integer-input>
         <tsp-integer-input class="tsp-attributes-window__dimension_input" [label]="'Height:'" [maxValue]="99999"
           [(value)]="height">
