Added ellipse drawing tool

--- a/ts-paint/src/app/components/toolbox/toolbox.component.less
+++ b/ts-paint/src/app/components/toolbox/toolbox.component.less
@@ -65,3 +65,7 @@
 .tsp-toolbox__button--magnifierIcon{
   background-image: url("../../../assets/icons/magnifier.png");
 }
+
+.tsp-toolbox__button--ellipseIcon{
+  background-image: url("../../../assets/icons/ellipse.png");
+}
