Fixed focusing issues with toolbox buttons

--- a/ts-paint/src/styles.less
+++ b/ts-paint/src/styles.less
@@ -71,6 +71,11 @@ hr{
   outline: none;
 }
 
+div.tsp-button{
+  margin: 0px 1px -1px 0px;
+  box-sizing: border-box;
+}
+
 .tsp-button::before {
   content: " ";
   position: absolute;
