--- a/ts-paint/src/app/components/toolbox/toolbox.component.html
+++ b/ts-paint/src/app/components/toolbox/toolbox.component.html
@@ -1,3 +1,3 @@
-<button *ngFor="let tool of availableTools" class="tsp-button tsp-toolbox__button" [ngClass]="getNgClass(tool)"
-  (click)="selectTool(tool, $event)">
-</button>
+<div *ngFor="let tool of availableTools" class="tsp-button tsp-toolbox__button" [ngClass]="getNgClass(tool)"
+  (click)="selectTool(tool)">
+</div>
