--- a/ts-paint/src/app/components/toolbox/toolbox.component.less
+++ b/ts-paint/src/app/components/toolbox/toolbox.component.less
@@ -22,7 +22,7 @@
 }
 
 .tsp-toolbox__button--selected{
-  margin: 0 0 0 1px;
+  margin: 0 0 -1px 1px;
   border-width: 1px 2px 1px 1px;
   border-color: @color--grey @color--lighter-grey @color--lighter-grey @color--grey;
   background-position: center calc(50% + 1px) !important;
