--- a/ts-paint/src/app/components/menu/menu.component.less
+++ b/ts-paint/src/app/components/menu/menu.component.less
@@ -38,6 +38,8 @@
 }
 
 .tsp-menu__menu-level-2{
+  display: flex;
+  justify-content: space-between;
   padding-left: 23px;
   padding-right: 21px;
   padding-top: 2px;
@@ -56,4 +58,8 @@
 
 .tsp-menu__menu-level-2--disabled:hover{
   color: @color--grey;
+}
+
+.tsp-menu__menu-item-hotkeys{
+  margin-left: 20px;
 }
